style(scala-jvm): convert the track to the academic house style
All 43 articles in the Scala 3 & JVM track now follow STYLE.md: third-person
register with no filler, a "**Gist.**" opening that states problem, mechanism
and cost, mechanism-level depth with the load-bearing detail in bold, a Scala 3
implementation sketch where the topic admits one, and a "## Pitfalls" section of
concrete symptom-and-cause entries.

Each article was rewritten by one agent and then audited by a second, working
independently and instructed to assume the rewrite contained errors. That second
pass corrected 172 unsupported or overstated claims across the track — roughly
four per article — which is the clearest argument for keeping the two stages
separate. Representative corrections:

- Structured concurrency was described as "finalized as JEP 525 in JDK 26". JEP
  525 is the sixth preview; the API still requires --enable-preview.
- Virtual-thread pinning was stated in its pre-JDK 24 form. JEP 491 associates
  monitors with the virtual thread, so blocking inside `synchronized` no longer
  pins a carrier; native and foreign frames still do. The article had the
  failure mode right and its scope wrong, which is worse than saying less.
- An unsourced "Amazon reported up to 30% CPU reduction" was cut, along with the
  paragraph built to explain it, and a SPECjbb2015 figure that had been turned
  from a CPU-time reduction into a wall-clock speedup was restored.
- -XX:+ZGenerational on JDK 24+ was said to stop the JVM from starting. JEP 490
  obsoletes the flag rather than removing it, so HotSpot warns and ignores it.

Where a claim could not be checked against a source the article cites, it was
cut rather than softened, and no citation was added that the auditor could not
read — several agents reported openjdk.org returning HTTP 403 and correctly
declined to add the JEP as a source on that basis.

Verified across the whole corpus: style checker clean on all 43, Liquid checker
clean on 459, front